<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.helloworld.atmempresaconsultoria.ContatoActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="29dp"
        app:srcCompat="@drawable/detalhe_contato"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView7"
        android:layout_marginBottom="49dp"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@+id/imageView7"
        android:text="@string/detalhe_contato"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView7"
        android:layout_below="@+id/imageView7"
        android:layout_marginStart="19dp"
        android:layout_marginTop="34dp"
        android:text="@string/detalhe_email"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView7"
        android:layout_below="@+id/textView11"
        android:layout_marginStart="6dp"
        android:layout_marginTop="37dp"
        android:text="@string/detalhe_telefone1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView12"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="12dp"
        android:text="@string/detalhe_telefone2"
        android:textSize="18sp" />

</RelativeLayout>
