<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.helloworld.atmempresaconsultoria.ClienteActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="23dp"
        app:srcCompat="@drawable/detalhe_cliente"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_marginBottom="21dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/imageView4"
        android:text="@string/detalhe_cliente"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:srcCompat="@drawable/cliente1"
        android:layout_below="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalhe_sys"
        android:textSize="15sp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="21dp"
        android:layout_below="@+id/imageView5"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        app:srcCompat="@drawable/cliente2"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/imageView5" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView8"
        android:layout_below="@+id/imageView6"
        android:layout_marginTop="20dp"
        android:text="@string/detalhe_rsm"
        android:textSize="15sp" />

</RelativeLayout>
